@@ -117,6 +117,10 @@ dependencies {
     gatlingRuntimeOnly 'com.fasterxml.jackson.core:jackson-core:2.18.3'
     gatlingRuntimeOnly 'com.fasterxml.jackson.core:jackson-databind:2.18.3'
     gatlingRuntimeOnly 'com.fasterxml.jackson.core:jackson-annotations:2.18.3'
+    gatlingImplementation 'io.gatling:gatling-core-java:3.13.5'
+    gatlingImplementation 'io.gatling:gatling-http-java:3.13.5'
+    implementation 'io.gatling:gatling-core-java:3.13.5'
+    implementation 'io.gatling:gatling-http-java:3.13.5'
 
     // redis 적용
 //    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
@@ -124,8 +128,18 @@ dependencies {
 }
 
 gatling {
-    jvmArgs = ['-Xms4g', '-Xmx8g', '-XX:+HeapDumpOnOutOfMemoryError']
+    jvmArgs = [
+            '-Xms4g',
+            '-Xmx8g',
+            '--add-opens=java.base/java.lang=ALL-UNNAMED',
+            '--add-opens=java.base/java.nio=ALL-UNNAMED',
+            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+            '--add-opens=java.base/java.util=ALL-UNNAMED',
+            '--add-opens=java.base/java.text=ALL-UNNAMED'
+    ]
 }
+
 
 test {
     useJUnitPlatform()
